fix: 调整collapse icloud样式

--- a/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/src/antd-vars-patch.less
@@ -102,7 +102,7 @@
 // Collapse
 // ---
 @collapse-header-padding: 12px 16px;
-@collapse-header-padding-extra: 40px;
+@collapse-header-padding-extra: 42px;
 @collapse-header-bg: var(--collapse-header-bg);
 @collapse-content-bg: var(--collapse-content-bg);
 
